<resources>
    <string name="app_name">Мишина Анжелика</string>

    <string name="phone_hint">Мобильный</string>
    <string name="phone_text">+7 (917) 971&#8211;11&#8211;11</string>
    <string name="mail_hint">E-mail</string>
    <string name="mail_text">myMail@ya.ru</string>
    <string name="vk_hint">Профиль в VK</string>
    <string name="vk_text">vk.com/profile</string>
    <string name="github_hint">Репозиторий</string>
    <string name="github_text">github.com/user/DevIntensive</string>
    <string name="about_me_hint">О себе</string>
    <string name="about_me">Я не волшебник.. Я только учусь</string>

    <string name="rating_text">Рейтинг</string>
    <string name="rating_value">5</string>
    <string name="line_of_code_text">Написано строк кода</string>
    <string name="line_of_code_value">5</string>
    <string name="projects_text">Проектов</string>
    <string name="projects_value">5</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.chose.message">Выберите фото</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="authorization.text">ВОЙТИ</string>
    <string name="authorization.password_text">Пароль</string>
    <string name="authorization.forget_password_text">Забыли пароль?</string>
    <string name="search_txt">Поиск пользователя</string>
    <string name="view.txt">ПРОСМОТР</string>
    <string name="lines_code.txt">Строк кода</string>
    <string name="fullname_txt">Фамилия Имя</string>
</resources>
