<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior=".ui.behaviors.CustomNestedScrollBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/item_linear_layout_horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout
                style="@style/item_linear_layout_vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/edit_text"
                        android:inputType="phone"
                        android:hint="@string/phone_hint"
                        android:text="@string/phone_text"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/view_line.horizontal">
        </View>

        <LinearLayout
            style="@style/item_linear_layout_horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/item_linear_layout_vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/email_et"
                        style="@style/edit_text"
                        android:inputType="textEmailAddress"
                        android:hint="@string/mail_hint"
                        android:text="@string/mail_text"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/send_img"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/view_line.horizontal">

        </View>

        <LinearLayout
            style="@style/item_linear_layout_horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_circle_24dp"/>

            <LinearLayout
                style="@style/item_linear_layout_vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/profile_vk_et"
                        style="@style/edit_text"
                        android:inputType="textWebEditText"
                        android:hint="@string/vk_hint"
                        android:text="@string/vk_text"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/vk_img"
                style="@style/icon.right"
                android:src="@drawable/eye_24dp"/>
        </LinearLayout>

        <View
            style="@style/view_line.horizontal">
        </View>

        <LinearLayout
            style="@style/item_linear_layout_horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle_24dp"/>

            <LinearLayout
                style="@style/item_linear_layout_vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/repository_et"
                        style="@style/edit_text"
                        android:inputType="textWebEditText"
                        android:hint="@string/github_hint"
                        android:text="@string/github_text"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/github_img"
                style="@style/icon.right"
                android:src="@drawable/eye_24dp"/>
        </LinearLayout>

        <View
            style="@style/view_line.horizontal">
        </View>

        <LinearLayout
            style="@style/item_linear_layout_horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/account_circle_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/about_me_et"
                        style="@style/edit_text"
                        android:inputType="textMultiLine"
                        android:hint="@string/about_me_hint"
                        android:text="@string/about_me"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>