<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags = "scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_size"
                android:scaleType = "centerCrop"
                android:src = "@drawable/user_bg"
                android:fitsSystemWindows="true"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:theme="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ToolBarStyle"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_size"
        android:orientation="horizontal"
        android:background="@color/grey"
        android:gravity="center"
        app:behavior_min_height="@dimen/size_medium_56"
        app:layout_behavior=".ui.behaviors.UserInfoBehavior">

        <LinearLayout
            style="@style/status_bar_item"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/user_info_rait_txt"
                style="@style/text_view"
                android:text="@string/rating_value"
                android:textSize="@dimen/font_larger_24"/>
            <TextView
                style="@style/text_view"
                android:text="@string/rating_text"
                android:textSize="@dimen/font_normal_16"/>
        </LinearLayout>

        <View
            style="@style/view_line.vertical">
        </View>

        <LinearLayout
            style="@style/status_bar_item"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/user_info_code_lines_txt"
                style="@style/text_view"
                android:text="@string/line_of_code_value"
                android:textSize="@dimen/font_larger_24"/>
            <TextView
                style="@style/text_view"
                android:text="@string/line_of_code_text"
                android:textSize="@dimen/font_normal_16"/>

        </LinearLayout>

        <View
            style="@style/view_line.vertical">
        </View>

        <LinearLayout
            style="@style/status_bar_item"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/user_info_projects_txt"
                style="@style/text_view"
                android:text="@string/projects_value"
                android:textSize="@dimen/font_larger_24"/>

            <TextView
                style="@style/text_view"
                android:text="@string/projects_text"
                android:textSize="@dimen/font_normal_16"/>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/static_profile_content"/>

</android.support.design.widget.CoordinatorLayout>
