<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags = "scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/user_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:scaleType = "centerCrop"
                    android:src = "@drawable/user_photo"
                    android:fitsSystemWindows="true"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"

                    android:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="112dp"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_size_28"
                    android:paddingBottom="@dimen/padding_size_28"
                    android:background="@color/grey">

                    <LinearLayout
                        style="@style/status_bar_item"
                        android:layout_weight="0.25">

                        <TextView
                            style="@style/text_view"
                            android:text="@string/rating_value"
                            android:textSize="@dimen/font_larger_24"/>
                        <TextView
                            style="@style/text_view"
                            android:text="@string/rating_text"
                            android:textSize="@dimen/font_normal_16"/>
                    </LinearLayout>

                    <View
                        style="@style/view_line.vertical">
                    </View>

                    <LinearLayout
                        style="@style/status_bar_item"
                        android:layout_weight="0.5">

                        <TextView
                            style="@style/text_view"
                            android:text="@string/line_of_code_value"
                            android:textSize="@dimen/font_larger_24"/>
                        <TextView
                            style="@style/text_view"
                            android:text="@string/line_of_code_text"
                            android:textSize="@dimen/font_normal_16"/>

                    </LinearLayout>

                    <View
                        style="@style/view_line.vertical">
                    </View>

                    <LinearLayout
                        style="@style/status_bar_item"
                        android:layout_weight="0.25">

                        <TextView
                            style="@style/text_view"
                            android:text="@string/projects_value"
                            android:textSize="@dimen/font_larger_24"/>

                        <TextView
                            style="@style/text_view"
                            android:text="@string/projects_text"
                            android:textSize="@dimen/font_normal_16"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    style="@style/item_linear_layout_horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_call_black_24dp"/>

                    <LinearLayout
                        style="@style/item_linear_layout_vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/phone_et"
                                style="@style/edit_text"
                                android:inputType="phone"
                                android:hint="@string/phone_hint"
                                android:text="@string/phone_text"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/call_img"
                        style="@style/icon.right"
                        android:src="@drawable/ic_phone_in_talk_black_24dp"/>
                </LinearLayout>

                <View
                    style="@style/view_line.horizontal">
                </View>

                <LinearLayout
                    style="@style/item_linear_layout_horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_email_black_24dp"/>

                    <LinearLayout
                        style="@style/item_linear_layout_vertical">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/email_et"
                                style="@style/edit_text"
                                android:inputType="textEmailAddress"
                                android:hint="@string/mail_hint"
                                android:text="@string/mail_text"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_send_black_24dp"/>
                </LinearLayout>

                <View
                    style="@style/view_line.horizontal">

                </View>

                <LinearLayout
                    style="@style/item_linear_layout_horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/vk_circle_24dp"/>

                    <LinearLayout
                        style="@style/item_linear_layout_vertical">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/profile_vk_et"
                                style="@style/edit_text"
                                android:inputType="textWebEditText"
                                android:hint="@string/vk_hint"
                                android:text="@string/vk_text"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/eye_24dp"/>
                </LinearLayout>

                <View
                    style="@style/view_line.horizontal">
                </View>

                <LinearLayout
                    style="@style/item_linear_layout_horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/github_circle_24dp"/>

                    <LinearLayout
                        style="@style/item_linear_layout_vertical">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/repository_et"
                                style="@style/edit_text"
                                android:inputType="textWebEditText"
                                android:hint="@string/github_hint"
                                android:text="@string/github_text"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/eye_24dp"/>
                </LinearLayout>

                <View
                    style="@style/view_line.horizontal">
                </View>

                <LinearLayout
                    style="@style/item_linear_layout_horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/account_circle_24dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="bottom"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/about_me_et"
                                style="@style/edit_text"
                                android:inputType="textMultiLine"
                                android:hint="@string/about_me_hint"
                                android:text="@string/about_me"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src = "@drawable/ic_mode_edit_white_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right"
            android:layout_marginRight="@dimen/fab_right_space"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:menu="@menu/drawer_menu">
        <!--app:headerLayout="@layout/drawer_header"-->


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>